--- a/FamilyTree/Views/Home/Index.cshtml
+++ b/FamilyTree/Views/Home/Index.cshtml
@@ -1,19 +1,40 @@
-﻿@{
+﻿@using FamilyTree.Models;
+@model Person
+
+@{
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <h2>Family Tree</h2>
-        
-    <div class="col-md-4">
-     
-        
+        <br />
+
+        @using (Html.BeginForm("PersonOne", "Index", FormMethod.Post, new { @class = "col-xs-6 person-form" }))
+        {
+            @Html.LabelFor(m => m.FirstName, "First name: ")
+            @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+            @Html.LabelFor(m => m.LastName, "Last name: ")
+            @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+            @Html.LabelFor(m => m.BirthDate, "Birth date: ")
+            @Html.TextBoxFor(m => m.BirthDate, new { @class = "form-control" })
+            <br />
+            @Html.CheckBoxFor(m => m.IsAlive, new { @class = "checkbox-circle" })
+            @Html.LabelFor(m => m.IsAlive, "This person is living ")
+            <br />
+            <br />
+            @Html.LabelFor(m => m.DeathDate, "Death date: ")
+            @Html.TextBoxFor(m => m.DeathDate, new { @class = "form-control" })
+            <br />
+            <div class="form-group choose-gender">
+                @Html.Label("Gender: ")
+                <br />
+                @Html.LabelFor(m => m.Gender, "Male")
+                @Html.RadioButtonFor(m => m.Gender, "M", new { @class = "radio" })
+                @Html.LabelFor(m => m.Gender, "Female")
+                @Html.RadioButtonFor(m => m.Gender, "F", new { @class = "radio" })
+            </div>
+            <br />
+        }
     </div>
 </div>
